--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -21,7 +21,7 @@
 <resources>
 
     <!-- GENERAL -->
-    <string name="app_name">Paranoid OTA</string>
+    <string name="app_name">SaberDroid OTA</string>
     <string name="title_checking">Comprobando...</string>
     <string name="check_for_updates">Comprobar</string>
     <string name="no_additional_info">No hay información adicional</string>
@@ -34,7 +34,7 @@
     <string name="rom_new_version">¡Se ha encontrado una nueva versión de la ROM!</string>
     <string name="gapps_new_version">¡Se ha encontrado una nueva versió de las Google apps!</string>
     <string name="no_updates">No se han encontrado actualizaciones del sistema</string>
-    <string name="system_update_found">Se ha encontrado una nueva actualización y está preparada para descargar.\nPor favor comprueba las notificaciones que han aparecido. Ellas te llevarán a ParanoidOTA desde donde podrás descargar y/o instalar la actualización.\n\nActualización(es) encontrada:\n%1$s</string>
+    <string name="system_update_found">Se ha encontrado una nueva actualización y está preparada para descargar.\nPor favor comprueba las notificaciones que han aparecido. Ellas te llevarán a SaberDroidOTA desde donde podrás descargar y/o instalar la actualización.\n\nActualización(es) encontrada:\n%1$s</string>
 
     <!-- SYSTEM -->
     <string name="system_title">Info del sistema</string>
