--- a/res/values-it/strings.xml
+++ b/res/values-it/strings.xml
@@ -21,7 +21,7 @@
 <resources>
 
     <!-- GENERAL -->
-    <string name="app_name">Paranoid OTA</string>
+    <string name="app_name">SaberDroid OTA</string>
     <string name="title_checking">Controllo...</string>
     <string name="check_for_updates">Controlla</string>
     <string name="no_additional_info">Nessuna informazione aggiuntiva</string>
@@ -34,7 +34,7 @@
     <string name="rom_new_version">Nuovo aggiornameto ROM trovato!</string>
     <string name="gapps_new_version">Nuovo aggiornamento Google apps trovato!</string>
     <string name="no_updates">Nessun aggiornamento di sistema trovato.</string>
-    <string name="system_update_found">Un nuovo aggiornamento di sistema è stato trovato ed è pronto per essere scaricato.\nControlla le notifiche che dovrebbero essere comparse. Ti porteranno all\'app ParanoidOTA dove sarai in grado di scaricare e/o installare l\'aggiornamento di sistema.\n\nAggiornamento(i) trovato(i):\n%1$s</string>
+    <string name="system_update_found">Un nuovo aggiornamento di sistema è stato trovato ed è pronto per essere scaricato.\nControlla le notifiche che dovrebbero essere comparse. Ti porteranno all\'app SaberDroidOTA dove sarai in grado di scaricare e/o installare l\'aggiornamento di sistema.\n\nAggiornamento(i) trovato(i):\n%1$s</string>
 
     <!-- SYSTEM -->
     <string name="system_title">Informazioni sistema</string>
