--- a/res/values-fr/strings.xml
+++ b/res/values-fr/strings.xml
@@ -21,7 +21,7 @@
 <resources>
 
     <!-- GENERAL -->
-    <string name="app_name">Paranoid OTA</string>
+    <string name="app_name">SaberDroid OTA</string>
     <string name="title_checking">Vérification...</string>
     <string name="check_for_updates">Vérifier</string>
     <string name="no_additional_info">Pas d\'information supplémentaire</string>
@@ -34,7 +34,7 @@
     <string name="rom_new_version">Mise à jour de la ROM trouvée!</string>
     <string name="gapps_new_version">Mise à jour Google Apps trouvée!</string>
     <string name="no_updates">Pas de mise à jour système</string>
-    <string name="system_update_found">Mise à jour système prête à être téléchargé.\nVeuillez vérifier la notification. Celle ci vous redirigera vers ParanoidOTA où vous pourrez télécharger et/ou installer la mise à jour.\n\nMise(s) à jour trouvée(s):\n%1$s</string>
+    <string name="system_update_found">Mise à jour système prête à être téléchargé.\nVeuillez vérifier la notification. Celle ci vous redirigera vers SaberDroidOTA où vous pourrez télécharger et/ou installer la mise à jour.\n\nMise(s) à jour trouvée(s):\n%1$s</string>
 
     <!-- SYSTEM -->
     <string name="system_title">Info Système</string>
