--- a/res/values-pt/strings.xml
+++ b/res/values-pt/strings.xml
@@ -21,7 +21,7 @@
 <resources>
 
     <!-- GENERAL -->
-    <string name="app_name">Paranoid OTA</string>
+    <string name="app_name">SaberDroid OTA</string>
     <string name="title_checking">Verificando...</string>
     <string name="check_for_updates">Verificar</string>
     <string name="no_additional_info">Sem informações adicionais</string>
@@ -34,7 +34,7 @@
     <string name="rom_new_version">Nova atualização da ROM encontrada!</string>
     <string name="gapps_new_version">Nova atualização do Google apps encontrada!</string>
     <string name="no_updates">Nenhuma atualização do sistema encontrada</string>
-    <string name="system_update_found">Uma nova atualização do sistema foi encontrada e está pronta para download.\nPor favor, verifique as notificações que podem ter aparecido. Elas irão levá-lo ao Paranoid OTA de onde você será capaz de realizar o download e/ou instalar a atualização.\n\nAtualização(ões) encontrada(s):\n%1$s</string>
+    <string name="system_update_found">Uma nova atualização do sistema foi encontrada e está pronta para download.\nPor favor, verifique as notificações que podem ter aparecido. Elas irão levá-lo ao SaberDroid OTA de onde você será capaz de realizar o download e/ou instalar a atualização.\n\nAtualização(ões) encontrada(s):\n%1$s</string>
 
     <!-- SYSTEM -->
     <string name="system_title">Informação do sistema</string>
