--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -21,7 +21,7 @@
 <resources>
 
     <!-- GENERAL -->
-    <string name="app_name">Paranoid OTA</string>
+    <string name="app_name">SaberDroid OTA</string>
     <string name="title_checking">Checking...</string>
     <string name="check_for_updates">Check</string>
     <string name="no_additional_info">No additional information</string>
@@ -34,7 +34,7 @@
     <string name="rom_new_version">New ROM update found!</string>
     <string name="gapps_new_version">New Google apps update found!</string>
     <string name="no_updates">No system updates found</string>
-    <string name="system_update_found">A new system update was found and is ready to download.\nPlease check the notifications that may have appeared. They will lead you to ParanoidOTA from where you will be able to download and/or install the update.\n\nUpdate(s) found:\n%1$s</string>
+    <string name="system_update_found">A new system update was found and is ready to download.\nPlease check the notifications that may have appeared. They will lead you to SaberDroidOTA from where you will be able to download and/or install the update.\n\nUpdate(s) found:\n%1$s</string>
 
     <!-- SYSTEM -->
     <string name="system_title">System info</string>
